                         CHANGES version 2.8

              This file summarizes changes made since 1.0
              
Version 2.8
-----------
* Allow spaces in URL property values
* PostgreSQL: Allow sending application name to the server for 
  logging. Thanks to Chris Mayo. See the PostgreSQL URL property,
  application-name.

Version 2.7
-----------
* Added tentative support for Oracle. Thanks to Volodymyr
  Tarasenko, and Sergey Pavlov for implementing this.
  This implementation does not support BLOB, though CLOB
  is supported. It will also not run all zdb unit tests,
  but should be useful for most purposes. It is released
  with the hope that others may still find it useful and
  help iron out any remaining issues.
* Added new convenience zdb.h meta include file which
  can be used to include all required API interfaces
* Internal optimizing changes and improvements
* SQLite: Clear connection on rollback to prevent SQLite
  from issue an SQLITE_BUSY error if there are pending
  selects in progress.
* SQLite: added a "heap_limit" URL property. Makes SQLite 
  auto-release unused memory if memory usage goes above 
  the specified limit [KB]. Require that SQLite is
  compiled with the SQLITE_ENABLE_MEMORY_MANAGEMENT option
  to take effect.
Bug fixes:
* SQLite: Ensure that the database file is specified in
  connection URL. Thanks to Bogdan Nicula.
* PostgreSQL: Implemented Connection_setQueryTimeout()

Version 2.6
-----------
* Internal optimizing changes and improvements
* Enable shared cache mode for SQLite >= 3.5
* Added new configure option --enable-sqliteunlock which
  enables SQLite unlock notification. This feature requires
  SQLite >= 3.6.12 compiled with the SQLITE_ENABLE_UNLOCK_NOTIFY
  C-preprocessor symbol. This option greatly improves upon 
  SQLite concurrency when libzdb and SQLite is used from a 
  multi-threaded program.
* Removed deprecated ResultSet_readData() from API
Bug fixes: