@@ -69,9 +69,8 @@ void(*AbortHandler)(const char *error) = NULL;
 
 
 static void drainPool(T P) {
-	Connection_T con;
         while (! Vector_isEmpty(P->pool)) {
-		con = Vector_pop(P->pool);
+		Connection_T con = Vector_pop(P->pool);
 		Connection_free(&con);
 	}
         assert(Vector_isEmpty(P->pool));
@@ -354,7 +353,7 @@ void ConnectionPool_returnConnection(T P, Connection_T connection) {
 	assert(P);
         assert(connection);
 	if (Connection_isInTransaction(connection)) {
-                TRY  Connection_rollback(connection); ELSE  END_TRY;
+                TRY Connection_rollback(connection); ELSE END_TRY;
 	}
 	Connection_clear(connection);
 	LOCK(P->mutex)
